src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_xor_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_x = load i8, i8* %x, align [filtered]
  %1 = icmp ne i8 %load_x, 0
  %load_y = load i8, i8* %y, align [filtered]
  %2 = icmp ne i8 %load_y, 0
  %3 = xor i1 %1, %2
  %4 = zext i1 %3 to i8
  store i8 %4, i8* %z, align [filtered]
  ret void
}
