src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__qualified_action_from_fb_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%bar = type { %fb }
%fb = type { i32 }

@bar_instance = global %bar zeroinitializer
@__fb__init = unnamed_addr constant %fb zeroinitializer

define void @bar(%bar* %0) {
entry:
  %fb_inst = getelementptr inbounds %bar, %bar* %0, i32 0, i32 0
  call void @fb__foo(%fb* %fb_inst)
  ret void
}

define void @fb(%fb* %0) {
entry:
  %this = alloca %fb*, align [filtered]
  store %fb* %0, %fb** %this, align [filtered]
  %x = getelementptr inbounds %fb, %fb* %0, i32 0, i32 0
  ret void
}

define void @fb__foo(%fb* %0) {
entry:
  %this = alloca %fb*, align [filtered]
  store %fb* %0, %fb** %this, align [filtered]
  %x = getelementptr inbounds %fb, %fb* %0, i32 0, i32 0
  store i32 2, i32* %x, align [filtered]
  ret void
}
