src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__qualified_foreign_action_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%bar = type {}
%prg = type { i32 }

@bar_instance = global %bar zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @bar(%bar* %0) {
entry:
  call void @prg__foo(%prg* @prg_instance)
  ret void
}

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  ret void
}

define void @prg__foo(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i32 2, i32* %x, align [filtered]
  ret void
}
