src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__real_function_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

define float @foo() {
entry:
  %foo = alloca float, align [filtered]
  store float 0.000000e+00, float* %foo, align [filtered]
  store float 1.000000e+00, float* %foo, align [filtered]
  %foo_ret = load float, float* %foo, align [filtered]
  ret float %foo_ret
}

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %call = call float @foo()
  %1 = fptosi float %call to i32
  store i32 %1, i32* %x, align [filtered]
  ret void
}
