src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__repeat_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %__ran_once_0 = alloca i8, align [filtered]
  store i8 0, ptr %__ran_once_0, align [filtered]
  br label %while_body

while_body:                                       ; preds = %continue1, %entry
  %load___ran_once_0 = load i8, ptr %__ran_once_0, align [filtered]
  %1 = icmp ne i8 %load___ran_once_0, 0
  br i1 %1, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body3
  ret void

condition_body:                                   ; preds = %while_body
  %load_x = load i8, ptr %x, align [filtered]
  %2 = icmp ne i8 %load_x, 0
  br i1 %2, label %condition_body3, label %continue2

continue1:                                        ; preds = %continue2, %while_body
  store i8 1, ptr %__ran_once_0, align [filtered]
  %load_x4 = load i8, ptr %x, align [filtered]
  br label %while_body

condition_body3:                                  ; preds = %condition_body
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue2

continue2:                                        ; preds = %buffer_block, %condition_body
  br label %continue1
}
