src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__returning_early_in_function.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @smaller_than_ten(i8 signext %0) {
entry:
  %smaller_than_ten = alloca i16, align [filtered]
  %n = alloca i8, align [filtered]
  store i8 %0, ptr %n, align [filtered]
  store i16 0, ptr %smaller_than_ten, align [filtered]
  %load_n = load i8, ptr %n, align [filtered]
  %1 = sext i8 %load_n to i32
  %tmpVar = icmp slt i32 %1, 10
  %2 = zext i1 %tmpVar to i8
  %3 = icmp ne i8 %2, 0
  br i1 %3, label %condition_body, label %continue

condition_body:                                   ; preds = %entry
  %smaller_than_ten_ret = load i16, ptr %smaller_than_ten, align [filtered]
  ret i16 %smaller_than_ten_ret

buffer_block:                                     ; No predecessors!
  br label %continue

continue:                                         ; preds = %buffer_block, %entry
  %smaller_than_ten_ret1 = load i16, ptr %smaller_than_ten, align [filtered]
  ret i16 %smaller_than_ten_ret1
}
