src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__returning_early_in_function_block.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%abcdef = type { i8 }

@__abcdef__init = unnamed_addr constant %abcdef zeroinitializer

define void @abcdef(%abcdef* %0) {
entry:
  %this = alloca %abcdef*, align [filtered]
  store %abcdef* %0, %abcdef** %this, align [filtered]
  %n = getelementptr inbounds %abcdef, %abcdef* %0, i32 0, i32 0
  %load_n = load i8, i8* %n, align [filtered]
  %1 = sext i8 %load_n to i32
  %tmpVar = icmp slt i32 %1, 10
  %2 = zext i1 %tmpVar to i8
  %3 = icmp ne i8 %2, 0
  br i1 %3, label %condition_body, label %continue

condition_body:                                   ; preds = %entry
  ret void

buffer_block:                                     ; No predecessors!
  br label %continue

continue:                                         ; preds = %buffer_block, %entry
  ret void
}
