src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__simple_case_i8_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i8, i8* %x, align [filtered]
  switch i8 %load_x, label %else [
    i8 1, label %case
    i8 2, label %case1
    i8 3, label %case2
  ]

case:                                             ; preds = %entry
  store i8 1, i8* %y, align [filtered]
  br label %continue

case1:                                            ; preds = %entry
  store i8 2, i8* %y, align [filtered]
  br label %continue

case2:                                            ; preds = %entry
  store i8 3, i8* %y, align [filtered]
  br label %continue

else:                                             ; preds = %entry
  store i8 0, i8* %y, align [filtered]
  br label %continue

continue:                                         ; preds = %else, %case2, %case1, %case
  ret void
}
