src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__simple_case_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i32, i32* %x, align [filtered]
  switch i32 %load_x, label %else [
    i32 1, label %case
    i32 2, label %case1
    i32 3, label %case2
  ]

case:                                             ; preds = %entry
  store i32 1, i32* %y, align [filtered]
  br label %continue

case1:                                            ; preds = %entry
  store i32 2, i32* %y, align [filtered]
  br label %continue

case2:                                            ; preds = %entry
  store i32 3, i32* %y, align [filtered]
  br label %continue

else:                                             ; preds = %entry
  store i32 -1, i32* %y, align [filtered]
  br label %continue

continue:                                         ; preds = %else, %case2, %case1, %case
  ret void
}
